--- a/students/Royal/page1-part2/index.html
+++ b/students/Royal/page1-part2/index.html
@@ -25,34 +25,22 @@
     <body>
         <header>
             <nav>
-                <div class="col-phone-25">
-                    <img class="nav_logo" src="images/nav_logo.png">
-                </div>
-                <div class="col-phone-75">
-                    <div class="col-phone-25">
-                        探索
-                    </div>
-                    <div class="col-phone-25">
-                        技能樹
-                    </div>
-                    <div class="col-phone-25">
-                        登入
-                    </div>
-                    <div class="col-phone-25">
-                         <img class="nav_search" src="images/nav_search.png">
+                <div class="col-phone-25 col-tablet-50">
+                    <div class="nav_logo_container">
+                        <img class="nav_logo" src="images/nav_logo.png">
                     </div>
                 </div>
-<!--
-                <img class="nav_logo" src="images/nav_logo.png">
-                <ul class="nav_list">
-                    <li class="nav_list_items">探索</li>
-                    <li class="nav_list_items">技能樹</li>
-                    <li class="nav_list_items">登入</li>
-                    <li class="nav_list_items">
-                        <img class="nav_search" src="images/nav_search.png">
-                    </li>
-                </ul>
--->
+                <div class="col-phone-75 col-tablet-50">
+                    <div class="nav_content_container">
+                            <span class="nav_content">探索</span>
+                            <span class="nav_content">技能樹</span>
+                            <span class="nav_content">登入</span>
+                            <a class="nav_content">
+                                <img class="nav_search" src="images/nav_search.png">
+                            </a>    
+                        
+                    </div>
+                </div>
             </nav>
             
         </header>
