--- a/students/Royal/page1-part2/article.html
+++ b/students/Royal/page1-part2/article.html
@@ -154,6 +154,7 @@
                 </div>
             </div>
         </footer>
+        <script src="js/lib.js"></script>
         <script src="js/common.js"></script>
         <script src="js/article.js"></script>
         
