--- a/students/Royal/page1-part2/index.html
+++ b/students/Royal/page1-part2/index.html
@@ -42,17 +42,13 @@
             </nav>
             
         </header>
-        <main>
+        <main id="main">
             <!-- loading page -->
             <div id="loadingDraw" class="loading_draw"></div>
             <div id="loadingPage" class="loading_page" >
                 <div class="loading_logo">
                 </div>
             </div>
-            <!-- aside btn -->
-            <a id="asideBtnContainer"  class="aside_container" >
-                <img class="aside_btn" src="images/FE_test_go.png" onclick="testClick()">
-            </a>
             <!-- search bar -->
             <div id="searchBar">
                 <div class="searchBar_container">
@@ -95,17 +91,6 @@
                     </div>
                 </div>
             </section>
-            <!-- test layout -->
-<!--
-            <div class="test_layout" id="testLayout">
-                <div class="test_container" id="testContainer">
-                    <p class="test_header" id="testHeader">測驗說明</p>
-                    <p class="test_preface" id="testPreface">點選「開始測驗」後，系統將根據你的回答，找出最適合你的學習環境，並顯示有多少百分比的合適度。</p>
-                    <p class="test_start_btn" id="testStartBtn">開始測驗</p>
-                </div>
-            </div>
--->
-            
             <!--course-->
             <section>
                 <div class="container">
