page1-part2 JS特效

--- a/page1/part2/index.html
+++ b/page1/part2/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="all.css">
 </head>
 <body>
-    <div class="header">
+    <div class="header" id="header">
         <a href="http://localhost:8080/front-end-front-enter/page1/part2/index.html"><img class="logo" src="https://frankyeah.github.io/Front-Enter/images/FE_logo-4.png" alt="Front-Enter logo"></a>
         <ul class="title">
             <li><a class="font" href="#">探索</a></li>
@@ -38,13 +38,15 @@
     </div>
     <div class="bg4">
         <div class="frame">
-            <img class="pen" src="https://frankyeah.github.io/Front-Enter/images/FE_pen.png" alt="pen">
+            <p class="triangle"></p>
+            <img class="pen"  src="https://frankyeah.github.io/Front-Enter/images/FE_pen.png" alt="pen">
             <p class="search1">探索</p>
             <p class="border"></p>
             <p class="text">我們提供公正的資訊，<br>幫您順利轉職，<br>並追蹤最新的業界動態。</p>
             <input type="button" value="找學校" class="school">
         </div>
         <div class="frame">
+            <p class="triangle"></p>
             <img class="pen2" src="https://frankyeah.github.io/Front-Enter/images/FE_pen.png" alt="pen2">
             <p class="search2">技能樹</p>
             <p class="border2"></p>
@@ -59,7 +61,7 @@
         <p class="bg5word4">「Front-Enter」特別針對前端工程的學習資源，進行蒐集、分類， 期待<br>讓有志成為前端工程師的人，找到最適合自己的學習環境。</p>
     </div>
     <div class="button">
-        <a href="#"><img class="top" src="https://frankyeah.github.io/Front-Enter/images/FE_TOP.png" alt="top"></a>
+        <img class="top" id="totop" src="https://frankyeah.github.io/Front-Enter/images/FE_TOP.png" alt="top">
     </div>
     <div>
         <ul class="footer">
@@ -71,5 +73,6 @@
             </li>
         </ul>
     </div>
+    <script src="all.js"></script>
 </body>
 </html>
