--- a/page1/part3/index.html
+++ b/page1/part3/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="all.css">
 </head>
 <body>
-    <div class="loading" id="loading">
-        <img class="frontlogo" src="https://frankyeah.github.io/Front-Enter/images/FE_logo-4.png" alt="frontlogo">
+    <div class="loading1" id="loading1"></div>
+    <div class="loading2" id="loading2">
+        <img class="frontlogo" id="frontlogo" src="https://frankyeah.github.io/Front-Enter/images/FE_logo-4.png" alt="frontlogo">
     </div>
     <div class="header" id="header">
         <a href="#"><img class="logo" src="https://frankyeah.github.io/Front-Enter/images/FE_logo-4.png" alt="Front-Enter logo"></a>
@@ -26,6 +27,7 @@
         <img class="hideSearch" id="hideSearch" src="https://frankyeah.github.io/Front-Enter/images/FE_search_green.png" alt="搜尋">
         <img class="microphone" id="microphone" src="https://frankyeah.github.io/Front-Enter/images/microphone.svg" alt="麥克風">
     </div>
+    <div class="hide2" id="hide2"></div>
     <div>
         <a href="#"><img class="textgo" src="https://frankyeah.github.io/Front-Enter/images/FE_test_go.png" alt="測驗"></a>
     </div>
